--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 nmdc_notebook_tools/__pycache__/
+nmdc_notebook_tools/test/__pycache__/
 *.py[cod]
 *$py.class
 
